rulex-lib/tests/testcases/errors/2.txt
#! expect=error
~~~~~~~~
-----
Parse error: Unknown token
  at 0..1